# TestGesture

./: .gitignore  README.md
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/hiscene/com/hiscenegesture/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/model/: FistModel.xml  HeadModel.xml  HiarSi.conf  PalmModel.xml
app/src/main/cpp/: CMakeLists.txt  HiarLog.h  HiarSi.h  HiarSiFunction.cpp  HiarSiFunction.h  HiarSiTypes.h  tradition.cpp  tradition.h
app/src/main/java/hiscene/com/hiscenegesture/: CameraPreview.java  Drawer.java  FileUtil.java  HisceneSurfaceView.java  MainActivity.java  PermissionsActivity.java  PermissionsChecker.java
app/src/main/java/hiscene/com/hiscenegesture/JNI/tradition/: TraditionManager.java
app/src/main/java/hiscene/com/hiscenegesture/api/: IAlgWrapper.java  IDrawer.java  INotify.java
app/src/main/java/hiscene/com/hiscenegesture/base/: AlgWrapper.java  BaseBox.java  BaseEvent.java  BoxList.java  HisceneEvent.java
app/src/main/jniLibs/armeabi-v7a/: libHiarSi.so_peiyi
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/hiscene/com/hiscenegesture/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
